@startuml

title __LIGHT-ADAPTATION-SERVICE's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    class pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationService {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    class pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationServiceApp {
    }
  }
  

  pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationService -up-|> pt.ulisboa.tecnico.surespace.ds2os.service.AdaptationService
  pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationService o-- pt.ulisboa.tecnico.surespace.arduino.device.LightBeacon : beacon
  pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationService o-- pt.ulisboa.tecnico.surespace.arduino.device.LightWitness : witness
  pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessIntensitySamplingRateValue
  pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessIntensityValue
  pt.ulisboa.tecnico.surespace.ds2os.service.LightAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessIsOn


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
